--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <input class='open' type='submit' value='Open'/>
       </div>
       <p class='warn'></p>
+      <a class='bookmarklet' href="javascript:(function()%7Bwindow.location%20%3D%20'http%3A%2F%2Fandrejewski.github.io%2Fyoutube-frame%23'%2Bwindow.location.href.split('%2F').pop().split('%3D').pop()%7D)()">
+        Drag this bookmarklet to your bookmarks and click it when watching a video you want to fill the screen.
+      </a>
     </form>
     <iframe id='frame' class='hidden' frameborder='none'></iframe>
 
